still issues with reading_text_id

--- a/app/views/reading_texts/show.html.erb
+++ b/app/views/reading_texts/show.html.erb
@@ -9,7 +9,7 @@
 <h2>Lancer une séance</h2>
 
 <%= form_with url: "/sessions/start", method: :post, data: { turbo: false } do %>
-  <%= hidden_field_tag :reading_text_id, @reading_text.id %>
+  <%= hidden_field_tag :text_id, @reading_text.id %>
 
   <!-- On ajoutera student_id quand on aura le contexte -->
   <p>
